--- a/views/template/nav.pug
+++ b/views/template/nav.pug
@@ -1,7 +1,9 @@
 #logo 
 	img(src="/imgs/logo.png")#logoIcon
-	//span #{bag.marble_company}
 	span 电动汽车交易平台
+	span.systime 模拟系统时间:(
+	span#simulationSysTime.systime
+	span.systime )
 
 
 #whoAmI
