--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -12,6 +12,8 @@ block custom_header
     script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
     link(rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css")
     script(src="https://unpkg.com/element-ui/lib/index.js")
+    link(rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css")
+    script(src="https://unpkg.com/element-ui/lib/index.js")
     link(href="lib/datetimepicker/datetimepicker.min.css" rel="stylesheet")
     script(src="lib/datetimepicker/datetimepicker.min.js")
     link(href="lib/chosen/chosen.min.css" rel="stylesheet")
@@ -20,6 +22,7 @@ block custom_header
     script(src="lib/datagrid/zui.datagrid.min.js")
     link(type="text/css" rel="stylesheet" href="/css/main.css?v=" + bag.csshash)
     script(src="http://api.map.baidu.com/api?v=2.0&ak=BjGa4MDmGMiqB04Hrjn9iYvxx94ERYPu")
+    //script(src="http://echarts.baidu.com/build/dist/echarts.js")
     script(src='/js/BmapUtil.js?v=' + bag.jshash)
     script(src='/js/util.js?v=' + bag.jshash)
     script(src='/js/chargingPile.js?v=' + bag.jshash)
@@ -27,6 +30,7 @@ block custom_header
     script(src='/js/electricVehicle.js?v=' + bag.jshash)
     script(src='/js/line.js?v=' + bag.jshash)
     script(src='/js/mapping.js?v=' + bag.jshash)
+    //script(src='/js/util/echarts.common.min.js')
     script(type='text/javascript').
         // $(document).ready(function () {
         //     var centerPoint = [104.0863, 30.656913];
