--- a/views/template/layout.pug
+++ b/views/template/layout.pug
@@ -84,6 +84,36 @@ html
                 //    button(type="button",data-dismiss="alert",aria-hidden="true").close ×
                 //        p 您可以点击右上角的
                 //            i.icon-remove 来关闭这条消息
+                div#transactionListCol.modal.fade
+                    div.modal-dialog
+                        div.modal-content
+                            div.modal-header
+                                //button(type="button")#closeMap.close
+                                    //data-dismiss="modal".close#disableStoryMode
+                                    //span(aria-hidden="true") ×
+                                    //span.sr-only 关闭
+                                h4.modal-title 交易列表
+                            div.modal-body
+                            div.modal-footer
+                div#electricityPriceCol.modal.fade
+                    div.modal-dialog
+                        div.modal-content
+                            div.modal-header
+                                //button(type="button")#closeMap.close
+                                    //data-dismiss="modal".close#disableStoryMode
+                                    //span(aria-hidden="true") ×
+                                    //span.sr-only 关闭
+                                h4.modal-title 实时电价
+                            div.modal-body
+                                div#echartsMain
+                            div.modal-footer
+                                //button#saveSystemTime(type="button").btn.btn-primary 保存
+                                //button(type="button",data-dismiss="modal").btn.btn-default 关闭
+                                //button#getPoint(type="button").btn.btn-primary 保存
+                //div#myInfo.alert.alert-warning.alert-dismissable
+                //    button(type="button",data-dismiss="alert",aria-hidden="true").close ×
+                //        p 您可以点击右上角的
+                //            i.icon-remove 来关闭这条消息
                 #mainPanel
                     block content
                 br
