--- a/views/template/layout.pug
+++ b/views/template/layout.pug
@@ -52,6 +52,8 @@ html
                                     i.icon.icon-plus-sign
                                 button#addInputChargingStation(type="button").btn.btn-default
                                     i.icon.icon-plus-sign
+                                button#addInputTask(type="button").btn.btn-default
+                                    i.icon.icon-plus-sign
                                 button(type="button",data-dismiss="modal").btn.btn-default 关闭
                                 button#saveData(type="button").btn.btn-primary 保存
                 div#myMapCol.modal.fade
