--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -23,8 +23,9 @@ block custom_header
     link(type="text/css" rel="stylesheet" href="/css/main.css?v=" + bag.csshash)
     script(src="http://api.map.baidu.com/api?v=2.0&ak=BjGa4MDmGMiqB04Hrjn9iYvxx94ERYPu")
     //script(src="http://echarts.baidu.com/build/dist/echarts.js")
-    script(src='/js/BmapUtil.js?v=' + bag.jshash)
     script(src='/js/util.js?v=' + bag.jshash)
+    script(src='/js/timer.js?v=' + bag.jshash)
+    script(src='/js/BmapUtil.js?v=' + bag.jshash)
     script(src='/js/chargingPile.js?v=' + bag.jshash)
     script(src='/js/chargingStation.js?v=' + bag.jshash)
     script(src='/js/electricVehicle.js?v=' + bag.jshash)
