--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -9,7 +9,8 @@ block custom_header
     script(src='/js/tx_story.js?v=' + bag.jshash)
     link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/zui/1.8.1/css/zui.min.css")
     script(src="//cdnjs.cloudflare.com/ajax/libs/zui/1.8.1/js/zui.min.js")
-    script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
+    //script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
+    script(src="https://unpkg.com/vue/dist/vue.js")
     link(rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css")
     script(src="https://unpkg.com/element-ui/lib/index.js")
     link(rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css")
