--- a/views/template/nav.pug
+++ b/views/template/nav.pug
@@ -1,6 +1,6 @@
-#logo 
+#logo
 	img(src="/imgs/logo.png")#logoIcon
-	span 电动汽车交易平台
+	span 电动汽车P2P电量交易平台
 	span.systime 模拟系统时间:(
 	span#simulationSysTime.systime
 	span.systime )
@@ -11,7 +11,7 @@
 	span#userField Admin
 	span &nbsp;
 	span.fa.fa-angle-down#carrot
-	
+
 
 	#userSelect
 		#triangle
