--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -44,6 +44,13 @@ block custom_header
         //     console.log(Bmap)
         // });
         $(function () {
+            var ws = {};
+            fromLS = window.localStorage.getItem(lsKey);
+            if (fromLS) fromLS = JSON.parse(fromLS);
+            else fromLS = {story_mode: false};					//dsh todo remove this
+            console.log('from local storage', fromLS);
+            connect_to_server();
+
             var centerPoint = [104.0863, 30.656913];
             Bmap.mapInit("mainPanel", centerPoint);
             Bmap.ZoomControlInit(Bmap.map);
