--- a/views/template/footer.pug
+++ b/views/template/footer.pug
@@ -1,3 +1,3 @@
 #footer
     span.time#systemTime
-    input(type='text').form-time#systemTimehidden
+    //input(type='text').form-time#systemTimehidden
