--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -114,7 +114,7 @@ block custom_header
             // map.addOverlay(circle);
             // var local = new BMap.LocalSearch(Bmap.map, {renderOptions: {map: Bmap.map, autoViewport: false}});
             // local.searchNearby('充电站', mPoint, 10000);
-            getPoints();
+            // getPoints();
 
         })
 
