--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -19,6 +19,7 @@ block custom_header
     link(href="lib/datetimepicker/datetimepicker.min.css" rel="stylesheet")
     script(src="lib/datetimepicker/datetimepicker.min.js")
     link(href="lib/chosen/chosen.min.css" rel="stylesheet")
+    link(href="css/map.css" rel="stylesheet")
     script(src="lib/chosen/chosen.min.js")
     link(href="lib/datagrid/zui.datagrid.min.css" rel="stylesheet")
     script(src="lib/datagrid/zui.datagrid.min.js")
