--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1769,6 +1769,7 @@ body {
 #pileTable {
     display: inline-flex;
     width: 730px;
+    max-height: 300px;
 }
 
 .item-content ul li {
@@ -1799,9 +1800,41 @@ nav.menu {
     width: 760px;
     height: 400px;
 }
-#transactionListCol .modal-dialog{
+
+#transactionListCol .modal-dialog {
     width: 1300px !important;
 }
+
 /*#myTimeCol {*/
 /*width: 500px;*/
 /*}*/
+.parkings-content {
+    border: grey solid 2px;
+}
+
+.parkings-info {
+    width: 100%;
+    height: 50px;
+}
+
+.clear {
+    clear: both;
+}
+
+.parking {
+    /*display: flex;*/
+    float: left;
+    margin: 10px;
+    border: red dashed 5px;
+    width: 100px;
+    max-height: 60px;
+    /*height: 50px;*/
+    text-align: center;
+    line-height: 50px;
+}
+
+.parking img {
+    width: 50px;
+    margin: 0;
+    padding: 0;
+}
