--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -70,6 +70,8 @@ block custom_header
             getAllTElectricVehicleWithLine();
             getCurrTimeSetSysTime();
             User.getUserList();
+            initUserAccount();
+            initchargingStationAccount();
             var p1 = new BMap.Point(104.130648, 30.57432);
             var p2 = new BMap.Point(104.130648, 30.57432);
             var p3 = new BMap.Point(104.088899, 30.790211);
