--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -72,6 +72,7 @@ block custom_header
             User.getUserList();
             initUserAccount();
             initchargingStationAccount();
+            queryAllUserAccounts();
             var p1 = new BMap.Point(104.130648, 30.57432);
             var p2 = new BMap.Point(104.130648, 30.57432);
             var p3 = new BMap.Point(104.088899, 30.790211);
