--- a/views/marbles.pug
+++ b/views/marbles.pug
@@ -3,6 +3,8 @@ extends ./template/layout.pug
 
 block custom_header
     // --------------- Header -------------- //
+    //script(src='/js/echarts-start.min.js?v=' + bag.jshash)
+    script(src='/js/echarts.min.js?v=' + bag.jshash)
     script(src='/js/config.js?v=' + bag.jshash)
     script(src='/js/ui_events.js?v=' + bag.jshash)
     //script(src='/js/websocket.js?v=' + bag.jshash)
